--- a/src/styles/details.scss
+++ b/src/styles/details.scss
@@ -6,14 +6,32 @@
 
 .photo-slider{
     position: absolute;
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat
-
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-size: cover;
+    background-position: top;
+    background-repeat: no-repeat;
 }
+
+@media(min-width: 768px) {
+    .slider-style {
+        height: 500px;
+    }
+}
+
+@media(min-width: 960px) {
+    .slider-style {
+        height: 600px;
+    }
+}
+
+@media(min-width: 1024px) {
+    .slider-style {
+        height: 700px;
+    }
+}
+
 
 
