--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -4,5 +4,20 @@
 
 }
 
+.glass-contain {
+    backdrop-filter: blur(15px);
+    background-color: rgba(255,255,255,.2);
+    border-radius: 3em;
+    border: 2px solid rgba(255,255,255,.1);
+    background-clip: padding-box;
+    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
+    padding: 20px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
+
+
 
 
